[gd_scene load_steps=6 format=3 uid="uid://ytwhmi4nouxg"]

[ext_resource type="Script" path="res://addons/easy_charts/utilities/containers/data_tooltip/data_tooltip.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xd2rg"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.1, 0.1, 0.1, 0.78)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
anti_aliasing_size = 0.9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d761c"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
anti_aliasing_size = 0.7

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h1mlx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g08ni"]

[node name="DataTooltip" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(20, 16)
offset_right = 167.0
offset_bottom = 73.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xd2rg")
script = ExtResource("1")

[node name="PointData" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(149, 34)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
alignment = 1

[node name="x" type="Label" parent="PointData"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Value" type="HBoxContainer" parent="PointData"]
custom_minimum_size = Vector2(149, 14)
layout_mode = 2
size_flags_horizontal = 7
theme_override_constants/separation = 1

[node name="Color" type="Panel" parent="PointData/Value"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_d761c")

[node name="VSeparator" type="VSeparator" parent="PointData/Value"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_h1mlx")

[node name="Function" type="Label" parent="PointData/Value"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5

[node name="sep" type="Label" parent="PointData/Value"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5
text = ":"

[node name="VSeparator2" type="VSeparator" parent="PointData/Value"]
custom_minimum_size = Vector2(4, 14)
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_g08ni")

[node name="y" type="Label" parent="PointData/Value"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5

[connection signal="visibility_changed" from="." to="." method="_on_DataTooltip_visibility_changed"]
